[gd_scene load_steps=8 format=2]

[ext_resource path="res://GFX/ballon1.png" type="Texture" id=1]
[ext_resource path="res://GFX/Ballon2.png" type="Texture" id=2]
[ext_resource path="res://SCRIPTS/Player1.gd" type="Script" id=3]
[ext_resource path="res://GFX/circle_05.png" type="Texture" id=4]
[ext_resource path="res://Player/Spectralvision.tscn" type="PackedScene" id=5]

[sub_resource type="AnimatedTexture" id=1]
flags = 5
frames = 2
frame_0/texture = ExtResource( 1 )
frame_1/texture = ExtResource( 2 )
frame_1/delay_sec = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 116.86
height = 192.28

[node name="Player" type="KinematicBody2D" groups=["Player"]]
z_index = 1
collision_mask = 6
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 1287.0, 998.0 ]
}

[node name="PlayerSprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 30 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 5.0
color = Color( 0.0235294, 0.862745, 0.972549, 1 )

[node name="Spectralvision" parent="." instance=ExtResource( 5 )]
visible = false
modulate = Color( 0.0313726, 0.886275, 0.929412, 1 )
position = Vector2( 37, -106 )
scale = Vector2( 2, 2 )
offset = Vector2( 319, -1 )
color = Color( 0.0235294, 0.862745, 0.972549, 1 )

[node name="Spectralvision2" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( -47, -98 )
scale = Vector2( 2, 2 )
offset = Vector2( 319, -1 )
color = Color( 0.0235294, 0.862745, 0.972549, 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 37, -106 )
cast_to = Vector2( 1250, 0 )
collision_mask = 4
collide_with_areas = true

[node name="TimerTeleport" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="TimerPhaseShift" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="TimerPowerWalk" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CooldownPhaseShift" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CooldownPowerWalk" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="TimerTeleport" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerPhaseShift" to="." method="_on_TimerPhaseShift_timeout"]
[connection signal="timeout" from="TimerPowerWalk" to="." method="_on_TimerPowerWalk_timeout"]
[connection signal="timeout" from="CooldownPhaseShift" to="." method="_on_CooldownPhaseShift_timeout"]
[connection signal="timeout" from="CooldownPowerWalk" to="." method="_on_CooldownPowerWalk_timeout"]
